# trace-backend

./: .env.example  .gitignore  Makefile  tdd-implementation-plan.md
app/backend/: pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 20251026_0406_07a6a58c5f21_add_multitenant_entities_organization_.py  20251026_0413_42bb03b9c2e0_extend_conversation_for_briefing_support.py  20251026_0441_d05ffdeba25e_add_briefing_template_and_version_models.py  20251026_0947_9c768bab4394_add_whatsapp_models_account_message_.py  20251026_1034_90d30d8d9f3d_add_briefing_model.py  20251026_1604_6edbbc83c5c3_add_briefing_analytics_table.py  20251026_2228_7470fd7ba768_initial_baseline.py  20251027_1506_4d29c51db12f_add_authorized_phones_table.py  20251027_1631_d8e31b80feea_updated_endclient.py  20251102_1807_e0d23f2a2007_add_unique_constraint_for_active_.py  20251106_2323_c4696da28d1a_add_delivered_at_and_read_at_to_.py  20251108_2014_811662fad351_add_processed_webhook_tracking_for_.py  20251110_0946_bbfe9cfec645_add_current_question_index_to_whatsapp_.py
app/backend/src/: main.py
app/backend/src/api/: auth.py  briefings.py  chat.py  organizations.py  templates.py  whatsapp_webhook.py
app/backend/src/core/: config.py  crypto.py  dependencies.py  lifespan.py  organization_access.py  rate_limit.py  security.py
app/backend/src/db/: session.py
app/backend/src/middleware/: user_state.py
app/backend/src/schemas/: __init__.py  architect.py  auth.py  authorized_phone.py  briefing.py  chat.py  template.py
app/backend/src/services/: authorized_phone_service.py  chat.py  template_service.py
app/backend/tests/: .env.test  conftest.py  test_ai_services.py  test_answer_special_commands.py  test_api_authorized_phones.py  test_api_briefings.py  test_api_templates.py  test_async_cache.py  test_auth.py  test_auth_integration.py  test_authorized_phone_service.py  test_briefing_analytics.py  test_briefing_flow.py  test_briefing_orchestrator.py  test_briefing_start_service.py  test_briefing_state_cache.py  test_cache_decorator.py  test_chat.py  test_chat_integration.py  test_crypto.py  test_e2e_whatsapp_briefing_flow.py  test_extraction_service.py  test_health_check.py  test_models_architect.py  test_models_authorized_phone.py  test_models_conversation_briefing.py  test_models_end_client.py  test_models_organization.py  test_models_templates.py  test_models_whatsapp.py  test_organization_isolation.py  test_phone_utils.py  test_question_progression.py  test_rate_limiting.py  test_security.py  test_token_storage.py  test_webhook_answer_processing.py  test_whatsapp_account_service.py  test_whatsapp_service.py  test_whatsapp_webhook.py  (+1 more)
app/backend/tests/fixtures/: __init__.py  auth.py  briefing.py  client.py  clients.py  database.py  mocks.py  organization.py  (+1 more)
(+36 files in other folders)
